# internal/handler/auth_handler.go
@@ -55,6 +55,106 @@ func Register(
 			})
 }
 
+// GetUsers godoc
+// @Summary Get all users
+// @Description Ambil semua user
+// @Tags Users
+// @Security BearerAuth
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /users [get]
+func GetUsers(
+	c *fiber.Ctx,
+) error {
+
+	users, err :=
+		service.GetAllUsers()
+
+	if err != nil {
+
+		return c.Status(500).
+			JSON(
+				fiber.Map{
+					"message": "failed get users",
+				})
+	}
+
+	return c.JSON(
+		fiber.Map{
+			"success": true,
+			"data":    users,
+		})
+}
+
+// UpdateUser godoc
+// @Summary Update user
+// @Description Update data user
+// @Tags Users
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path int true "User ID"
+// @Param request body dto.UpdateUserDTO true "Update Payload"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /users/{id} [put]
+func UpdateUser(
+	c *fiber.Ctx,
+) error {
+
+	idParam :=
+		c.Params("id")
+
+	id64, _ :=
+		strconv.ParseUint(
+			idParam,
+			10,
+			64,
+		)
+
+	var req dto.UpdateUserDTO
+
+	if err :=
+		c.BodyParser(
+			&req,
+		); err != nil {
+
+		return c.Status(400).
+			JSON(
+				fiber.Map{
+					"message": "invalid body",
+				})
+	}
+
+	actorID := uint(1)
+	// nanti ambil dari JWT
+
+	updated, err :=
+		service.UpdateUser(
+			uint(id64),
+			req.Name,
+			req.Email,
+			actorID,
+		)
+
+	if err != nil {
+
+		return c.Status(500).
+			JSON(
+				fiber.Map{
+					"message": "update failed",
+				})
+	}
+
+	return c.JSON(
+		fiber.Map{
+			"message": "updated",
+			"data":    updated,
+		})
+}
+
 // DeleteUser godoc
 // @Summary Delete user
 // @Security BearerAuth
